--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@
 NODE_ENV='development'
 PORT=3030
 MONGO_URI='' # your mongo uri signup at mongodb.com and get your connection url and paste it here
+
+JWT_SECRET='seLIOHFUEGI78oiju8y7t8giwyudhoju987YT6YGU6TUYI*OU(&^TYFYUHYf'
